--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -1,11 +1,22 @@
 <!doctype html>
 <html lang="{{ metadata.language }}">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{ title or metadata.title }}</title>
-    <meta name="description" content="{{ description or metadata.description }}">
-
+ <head>
+ <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><meta http-equiv="X-UA-Compatible" content="ie=edge">
+ <title>{{ isim }}</title>
+ <link rel="stylesheet" href="{{ '/css/vcard_plus_individual.css' | url }">
+ <link rel="stylesheet" href="{{ '/css/bs_generic.css' | url }">
+ <link href="{{ '/css/css.css' | url }" rel="stylesheet">
+ <!-- Google Analytics -->
+     
+ <!-- End of Google Analytics -->
+	<style>
+		.secondary_data {
+            color: #000000;
+        }
+		.content {
+      	font-family: 'Roboto', sans-serif;
+    	}
+	</style>
     {#- Uncomment this if you’d like folks to know that you used Eleventy to build your site!  #}
     {#- <meta name="generator" content="{{ eleventy.generator }}"> #}
 
