--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -3,9 +3,9 @@
  <head>
  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><meta http-equiv="X-UA-Compatible" content="ie=edge">
  <title>{{ isim }}</title>
- <link rel="stylesheet" href="{{ '/css/vcard_plus_individual.css' | url }">
- <link rel="stylesheet" href="{{ '/css/bs_generic.css' | url }">
- <link href="{{ '/css/css.css' | url }" rel="stylesheet">
+ <link rel="stylesheet" href="{{ '/css/vcard_plus_individual.css' | url }}">
+ <link rel="stylesheet" href="{{ '/css/bs_generic.css' | url }}">
+ <link href="{{ '/css/css.css' | url }}" rel="stylesheet">
  <!-- Google Analytics -->
      
  <!-- End of Google Analytics -->
