--- a/_includes/layouts/card.njk
+++ b/_includes/layouts/card.njk
@@ -1,28 +1,10 @@
-<!DOCTYPE html>
-<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><meta http-equiv="X-UA-Compatible" content="ie=edge">
-<title>{{ isim }}</title>
-<link rel="stylesheet" href="/css/vcard_plus_individual.css">
-<link rel="stylesheet" href="/css/bs_generic.css">
-<link href="/css/css.css" rel="stylesheet">
-<!-- Google Analytics -->
-     
-<!-- End of Google Analytics -->
-	<style>
-		.secondary_data {
-            color: #000000;
-        }
-		.content {
-      	font-family: 'Roboto', sans-serif;
-    	}
-	</style></head>
-
 <body style="margin: 0" id="body">
 <div class="content overflow-hidden">
 <div class="container position-absolute overflow-x-hidden">
 <div class="ellipse position-absolute" style="background-color: #{{ renk }};"></div>
 
 <div class="flex-center"><div class="profile flex-center position-absolute overflow-hidden">
-<img src="/img/{{ resim }}" class="user-image"></div></div>
+<img src="{{ '/img/{{ resim }}' | url }}" class="user-image"></div></div>
 <div class="flex-center user-name-container flex-column position-absolute"><div class="flex-center pl-20">
 <p class="user-name" style="color: #000000; font-size: 30px; margin-bottom: 10px;">{{ isim }}</p></div>
 <p class="user-designation mt-5 mb-0" style="color: #000000">{{ rol }}</p>
@@ -59,10 +41,10 @@
 
 <div class="social-heading">Connect with me on</div>
 <div class="grid-layout" style="margin-bottom:30px;">
-<a href="https://www.facebook.com/username" class="grid-item"><img src="/css/fb.png" class="social-logo"></a>
-<a href="https://www.instagram.com/username" class="grid-item"><img src="/css/ig.png" class="social-logo"></a>
-<a href="https://api.whatsapp.com/send?phone=905453168417" class="grid-item"><img src="/css/wp.png" class="social-logo"></a>
-<a href="https://telegram.me/username" class="grid-item"><img src="./İbrahim Abak_files/tg.png" class="social-logo"></a></div></div>
+<a href="https://www.facebook.com/username" class="grid-item"><img src="{{ '/css/fb.png' | url }}" class="social-logo"></a>
+<a href="https://www.instagram.com/username" class="grid-item"><img src="{{ '/css/ig.png' | url }}" class="social-logo"></a>
+<a href="https://api.whatsapp.com/send?phone=905453168417" class="grid-item"><img src="{{ '/css/wp.png' | url }}" class="social-logo"></a>
+<a href="https://telegram.me/username" class="grid-item"><img src="{{ '/css/tg.png' | url }}" class="social-logo"></a></div></div>
 
 <div class="btn-container flex-center" style="background-color: #{{ renk }};"><div class="flex-center">
 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M15.5 19C15.5 19.2761 15.7239 19.5 16 19.5C16.2761 19.5 16.5 19.2761 16.5 19H15.5ZM16 17H16.5H16ZM12 13V12.5V13ZM5 13L5 12.5L5 13ZM1 17H0.5H1ZM0.5 19C0.5 19.2761 0.723858 19.5 1 19.5C1.27614 19.5 1.5 19.2761 1.5 19H0.5ZM20.5 6C20.5 5.72386 20.2761 5.5 20 5.5C19.7239 5.5 19.5 5.72386 19.5 6H20.5ZM19.5 12C19.5 12.2761 19.7239 12.5 20 12.5C20.2761 12.5 20.5 12.2761 20.5 12H19.5ZM23 9.5C23.2761 9.5 23.5 9.27614 23.5 9C23.5 8.72386 23.2761 8.5 23 8.5V9.5ZM17 8.5C16.7239 8.5 16.5 8.72386 16.5 9C16.5 9.27614 16.7239 9.5 17 9.5V8.5ZM16.5 19V17H15.5V19H16.5ZM16.5 17C16.5 15.8065 16.0259 14.6619 15.182 13.818L14.4749 14.5251C15.1313 15.1815 15.5 16.0717 15.5 17H16.5ZM15.182 13.818C14.3381 12.9741 13.1935 12.5 12 12.5L12 13.5C12.9283 13.5 13.8185 13.8687 14.4749 14.5251L15.182 13.818ZM12 12.5H5V13.5H12V12.5ZM5 12.5C3.80653 12.5 2.66193 12.9741 1.81802 13.818L2.52513 14.5251C3.1815 13.8687 4.07174 13.5 5 13.5L5 12.5ZM1.81802 13.818C0.974106 14.6619 0.5 15.8065 0.5 17H1.5C1.5 16.0717 1.86875 15.1815 2.52513 14.5251L1.81802 13.818ZM0.5 17V19H1.5V17H0.5ZM12 5C12 6.933 10.433 8.5 8.5 8.5V9.5C10.9853 9.5 13 7.48528 13 5H12ZM8.5 8.5C6.567 8.5 5 6.933 5 5H4C4 7.48528 6.01472 9.5 8.5 9.5V8.5ZM5 5C5 3.067 6.567 1.5 8.5 1.5V0.5C6.01472 0.5 4 2.51472 4 5H5ZM8.5 1.5C10.433 1.5 12 3.067 12 5H13C13 2.51472 10.9853 0.5 8.5 0.5V1.5ZM19.5 6V12H20.5V6H19.5ZM23 8.5H17V9.5H23V8.5Z" fill="white"></path></svg>
