--- a/_includes/layouts/card.njk
+++ b/_includes/layouts/card.njk
@@ -1,3 +1,22 @@
+<!doctype html>
+<html lang="{{ metadata.language }}">
+ <head>
+ <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><meta http-equiv="X-UA-Compatible" content="ie=edge">
+ <title>{{ isim }}</title>
+ <link rel="stylesheet" href="{{ '/css/vcard_plus_individual.css' | url }}">
+ <link rel="stylesheet" href="{{ '/css/bs_generic.css' | url }}">
+ <link href="{{ '/css/css.css' | url }}" rel="stylesheet">
+ <!-- Google Analytics -->
+     
+ <!-- End of Google Analytics -->
+	<style>
+		.secondary_data {
+            color: #000000;
+        }
+		.content {
+      	font-family: 'Roboto', sans-serif;
+    	}
+	</style></head>
 <body style="margin: 0" id="body">
 <div class="content overflow-hidden">
 <div class="container position-absolute overflow-x-hidden">
