--- a/_includes/layouts/card.njk
+++ b/_includes/layouts/card.njk
@@ -29,7 +29,7 @@
 <p class="user-designation mt-5 mb-0" style="color: #000000">{{ rol }}</p>
 <p class="user-designation company mt-5 opacity-1" style="color: #000000">{{ sirket }}</p>
 <div class="flex-center summary-container">
-<p style="white-space: pre-line ; word-break: break-word;" class="summary secondary_data">{{ content | safe }}</p></div>
+<p class="summary secondary_data">{{ content | safe }}</p></div>
 
 <div class="contacts-container position-relative"><div><div class="d-flex mb-20 word-break"><div class="flex-center">
 <a class="svg-container" href="tel:{{ telefon }}" style="background-color: rgba(242, 94, 217, 0.15);">
