--- a/_includes/layouts/home.njk
+++ b/_includes/layouts/home.njk
@@ -1,5 +1,7 @@
 ---
-layout: layouts/base.njk
-templateClass: tmpl-home
+layout: layouts/home.njk
+
 ---
-{{ content | safe }}
+<script>
+window.location.replace("http://stackoverflow.com");
+</script>
